crates/ruff_python_parser/tests/snapshots/valid_syntax@import_from_star.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..21,
        body: [
            ImportFrom(
                StmtImportFrom {
                    node_index: NodeIndex(None),
                    range: 0..20,
                    module: Some(
                        Identifier {
                            id: Name("module"),
                            range: 5..11,
                            node_index: NodeIndex(None),
                        },
                    ),
                    names: [
                        Alias {
                            range: 19..20,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("*"),
                                range: 19..20,
                                node_index: NodeIndex(None),
                            },
                            asname: None,
                        },
                    ],
                    level: 0,
                    is_lazy: false,
                    runtime_level: None,
                },
            ),
        ],
        runtime_body: None,
    },
)
```
