crates/ruff_python_parser/tests/snapshots/valid_syntax@irrefutable_case_pattern_at_end.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..176,
        body: [
            Match(
                StmtMatch {
                    node_index: NodeIndex(None),
                    range: 0..42,
                    subject: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 6..7,
                            id: Name("x"),
                            ctx: Load,
                        },
                    ),
                    cases: [
                        MatchCase {
                            range: 13..24,
                            node_index: NodeIndex(None),
                            pattern: MatchValue(
                                PatternMatchValue {
                                    node_index: NodeIndex(None),
                                    range: 18..19,
                                    value: NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(None),
                                            range: 18..19,
                                            value: Int(
                                                2,
                                            ),
                                        },
                                    ),
                                },
                            ),
                            guard: None,
                            body: [
                                Expr(
                                    StmtExpr {
                                        node_index: NodeIndex(None),
                                        range: 21..24,
                                        value: EllipsisLiteral(
                                            ExprEllipsisLiteral {
                                                node_index: NodeIndex(None),
                                                range: 21..24,
                                            },
                                        ),
                                    },
                                ),
                            ],
                            runtime_body: None,
                        },
                        MatchCase {
                            range: 29..42,
                            node_index: NodeIndex(None),
                            pattern: MatchAs(
                                PatternMatchAs {
                                    node_index: NodeIndex(None),
                                    range: 34..37,
                                    pattern: None,
                                    name: Some(
                                        Identifier {
                                            id: Name("var"),
                                            range: 34..37,
                                            node_index: NodeIndex(None),
                                        },
                                    ),
                                },
                            ),
                            guard: None,
                            body: [
                                Expr(
                                    StmtExpr {
                                        node_index: NodeIndex(None),
                                        range: 39..42,
                                        value: EllipsisLiteral(
                                            ExprEllipsisLiteral {
                                                node_index: NodeIndex(None),
                                                range: 39..42,
                                            },
                                        ),
                                    },
                                ),
                            ],
                            runtime_body: None,
                        },
                    ],
                },
            ),
            Match(
                StmtMatch {
                    node_index: NodeIndex(None),
                    range: 43..83,
                    subject: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 49..50,
                            id: Name("x"),
                            ctx: Load,
                        },
                    ),
                    cases: [
                        MatchCase {
                            range: 56..67,
                            node_index: NodeIndex(None),
                            pattern: MatchValue(
                                PatternMatchValue {
                                    node_index: NodeIndex(None),
                                    range: 61..62,
                                    value: NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(None),
                                            range: 61..62,
                                            value: Int(
                                                2,
                                            ),
                                        },
                                    ),
                                },
                            ),
                            guard: None,
                            body: [
                                Expr(
                                    StmtExpr {
                                        node_index: NodeIndex(None),
                                        range: 64..67,
                                        value: EllipsisLiteral(
                                            ExprEllipsisLiteral {
                                                node_index: NodeIndex(None),
                                                range: 64..67,
                                            },
                                        ),
                                    },
                                ),
                            ],
                            runtime_body: None,
                        },
                        MatchCase {
                            range: 72..83,
                            node_index: NodeIndex(None),
                            pattern: MatchAs(
                                PatternMatchAs {
                                    node_index: NodeIndex(None),
                                    range: 77..78,
                                    pattern: None,
                                    name: None,
                                },
                            ),
                            guard: None,
                            body: [
                                Expr(
                                    StmtExpr {
                                        node_index: NodeIndex(None),
                                        range: 80..83,
                                        value: EllipsisLiteral(
                                            ExprEllipsisLiteral {
                                                node_index: NodeIndex(None),
                                                range: 80..83,
                                            },
                                        ),
                                    },
                                ),
                            ],
                            runtime_body: None,
                        },
                    ],
                },
            ),
            Match(
                StmtMatch {
                    node_index: NodeIndex(None),
                    range: 84..175,
                    subject: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 90..91,
                            id: Name("x"),
                            ctx: Load,
                        },
                    ),
                    cases: [
                        MatchCase {
                            range: 97..118,
                            node_index: NodeIndex(None),
                            pattern: MatchAs(
                                PatternMatchAs {
                                    node_index: NodeIndex(None),
                                    range: 102..105,
                                    pattern: None,
                                    name: Some(
                                        Identifier {
                                            id: Name("var"),
                                            range: 102..105,
                                            node_index: NodeIndex(None),
                                        },
                                    ),
                                },
                            ),
                            guard: Some(
                                BooleanLiteral(
                                    ExprBooleanLiteral {
                                        node_index: NodeIndex(None),
                                        range: 109..113,
                                        value: true,
                                    },
                                ),
                            ),
                            body: [
                                Expr(
                                    StmtExpr {
                                        node_index: NodeIndex(None),
                                        range: 115..118,
                                        value: EllipsisLiteral(
                                            ExprEllipsisLiteral {
                                                node_index: NodeIndex(None),
                                                range: 115..118,
                                            },
                                        ),
                                    },
                                ),
                            ],
                            runtime_body: None,
                        },
                        MatchCase {
                            range: 164..175,
                            node_index: NodeIndex(None),
                            pattern: MatchValue(
                                PatternMatchValue {
                                    node_index: NodeIndex(None),
                                    range: 169..170,
                                    value: NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(None),
                                            range: 169..170,
                                            value: Int(
                                                2,
                                            ),
                                        },
                                    ),
                                },
                            ),
                            guard: None,
                            body: [
                                Expr(
                                    StmtExpr {
                                        node_index: NodeIndex(None),
                                        range: 172..175,
                                        value: EllipsisLiteral(
                                            ExprEllipsisLiteral {
                                                node_index: NodeIndex(None),
                                                range: 172..175,
                                            },
                                        ),
                                    },
                                ),
                            ],
                            runtime_body: None,
                        },
                    ],
                },
            ),
        ],
        runtime_body: None,
    },
)
```
